frontend/materialize/sass/components/main.scss
/* ... */
.imgGrid {

}

.square {
    float: left;
    position: relative;
    width:31.25%;
    padding-bottom : 30% !important; /* = width for a 1:1 aspect ratio */
    margin:1%;
    background-position:center center;
    background-repeat:no-repeat;
    background-size:cover;
}

hr {
    margin-top:5%;
}

.slider.parkMenu {
  z-index:10;
  text-align:center;
  height:100%;

    h3 {
      margin:0;
      line-height:130%;
      // white-space: nowrap;
      font-size:1.4rem;
      font-family:Roboto-Slab;
      color:$secondary-color;
      font-weight:600 !important;
    }
}


.slider-frame{
  width: auto !important;
}
#slider-list{
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}

.carouselNav{
  width: 100%;
  height: 100%;
  position: relative;
}

.absolute-center{
  // nuka-carousel attempts to put top 50% on it.
  top: 0 !important;
  bottom: 0;
  margin-top: auto;
  margin-bottom: auto;
}

.slider-decorator-0 {
  @extend .absolute-center;

  background-color:#fff;
  background-image:url('../img/svg/downChev.svg');
  background-size:100% 100%;
  background-position:50%;
  width:20px;
  height:20px;
    :focus {
    background-color:#fff;
  }

}

.slider-decorator-1 {
  @extend .absolute-center;

  background-color:#fff;
  background-image:url('../img/svg/downChev.svg');
  background-size:100% 100%;
  background-position:50%;
  width:20px;
  height:20px;

    button:selected {
    background-color:#fff;
  }
}

.slider-decorator-2 {
  display:none;
}



// page navigation and container styles ///////////////////////////////////////




.staticPageContainer{
  display:block;
  width:25%;
  height: 100%;
  padding:0 30px;
  position: absolute;
  top:64px;
  right:0;
  background: white;
  z-index: 12;
  -webkit-transition: width 2s;
  transition: width 2s;

  p {
    line-height:1.3rem;
    font-weight:300;
    font-family:Roboto;
    color:$text-color;
  }

  h3 {
    font-size:1.5rem;
    line-height:1.5rem;
    font-family:Roboto-Slab;
    font-weight:400;
    color:$text-color;
    text-align:center;

  }

  .logo {
    margin-bottom:5%;
    position:inherit;
  }


}
.staticTitle {
  margin:0px 0px 5% 0px;
  line-height:100%;
  color:$primary-color;
  font-family:Roboto;
  font-weight:400;
  font-size:1.5rem;

}

.containerMask::after{
    width: 50px;
    // height: $navbar-height;
    height: 70px;
    content: "";
    top: 0px;
    display: block;
    position: fixed;
    background: white;
}
@media #{$small-and-down} {
  .containerMask::after{
    // height: $navbar-height-mobile;
    height: 61px;
  }  
  .staticPageContainer{
    top:0;
    width:100%;

    .staticTitle {
      margin-top:20px;
      margin-left:10px;
    }
  }
}  

@media #{$medium-only} {
  .staticPageContainer{
    width:50%;
  }
}

/* Back Button Styles */
.pushRight{
  margin-left: 50px;
}
#backBtn{
  -ms-transform: rotate(90deg);
  -webkit-transform: rotate(90deg);
  transform: rotate(90deg);
  background: url("../img/svg/downChev.svg") no-repeat !important;
  z-index: 3;

  width: 25px;  
  height: 25px;
  top: 15px;
  
  position: absolute;  
  &:hover{
    cursor: pointer;
  }
}
@media #{$small-and-down}{
  #backBtn{
    height: 25px;
  }  
}


/// acordian -----------------------------------
.section {
  position: relative;
  width: 100%;
  button {
    position: absolute;
    right: 0;
    margin: 0;
    padding: 0;
    height: 2em;
    width: 2em;
    outline: 0;
    border: 0;
    background-color:#fff;
    background-image:url('../img/svg/downChev.svg');
    background-size:100% 100%;
    background-position:50%;
    pointer-events: none;
        -ms-transform: rotate(0deg); /* IE 9 */
  -webkit-transform: rotate(0deg); /* Chrome, Safari, Opera */
  transform: rotate(0deg);
  }
}

.section.open {
  button {
      -ms-transform: rotate(180deg); /* IE 9 */
  -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
  transform: rotate(180deg);
  }
  .articlewrap {
    height: 120px;
  }
    .favDelete {
      opacity:1;
      transition: opacity .25s ease-in-out;
      -moz-transition: opacity .25s ease-in-out;
      -webkit-transition: opacity .25s ease-in-out;
  }
      .favGo {
      opacity:1;
      transition: opacity .25s ease-in-out;
      -moz-transition: opacity .25s ease-in-out;
      -webkit-transition: opacity .25s ease-in-out;
  }
}

.articlewrap {
  height: 0;
  overflow: hidden;
  transition: all .2s ease-in;
}

.sectionhead {
  font-family:Roboto;
  font-weight:300;
  color:$text-color;
  height:50px;
  width: 90%;
  overflow: hidden;
  background: white;
  cursor: pointer;
  text-overflow: ellipsis;
  padding:0 1em;
  padding-right: 2.1em;
}

.article {
  font-family:Roboto;
  font-weight:300;
  color:$primary-color;
  width:90%;
  padding: 1em;
  line-height: 1.3;
}

